# snark-setup

./: Cargo.toml
aleo-snark-setup/: Cargo.toml
phase2/: Cargo.toml
powersoftau/: Cargo.toml
powersoftau/src/cli_common/: mod.rs
snark-utils/: Cargo.toml
snark-utils/src/: groth16_utils.rs  helpers.rs
snark-utils/src/io/: read.rs  write.rs
test-helpers/: Cargo.toml
wasm-wrapper/: Cargo.toml
wasm-wrapper/src/: lib.rs
