[package]
name = "wasm-wrapper"
version = "0.1.0"
authors = ["Sarawut Sanit", "The Aleo Team <hello@aleo.org>"]
homepage = "https://github.com/AleoHQ/snark-setup"
repository = "https://github.com/AleoHQ/snark-setup"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
powersoftau = { path = "../powersoftau", default-features = false, features = ["wasm"] }
snark-utils = { path = "../snark-utils", default-features = false, features = ["wasm"] }

zexe_algebra = { git = "https://github.com/scipr-lab/zexe", package = "algebra", version = "0.1.0", features = ["parallel", "full", "derive"] }

wasm-bindgen = { version = "0.2.63", features=["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
serde = { version = "1.0.114" }
serde_derive = { version = "1.0.114" }
rand = { version = "0.7" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
